test/files/neg/t4691_exhaust_extractor.check
t4691_exhaust_extractor.scala:18: warning: match may not be exhaustive.
It would fail on the following input: Bar3()
  def f1(x: Foo) = x match {
                   ^
t4691_exhaust_extractor.scala:24: warning: match may not be exhaustive.
It would fail on the following input: Bar3()
  def f2(x: Foo) = x match {
                   ^
t4691_exhaust_extractor.scala:30: warning: match may not be exhaustive.
It would fail on the following input: Bar3()
  def f3(x: Foo) = x match {
                   ^
error: No warnings can be incurred under -Xfatal-warnings.
three warnings found
one error found
